--- a/day11/AngularHomework/index.html
+++ b/day11/AngularHomework/index.html
@@ -93,6 +93,54 @@
             </div>
         </form>
 
+        <form name="editForm" ng-submit="changePerson(editForm)" novalidate>
+            <div id="editPersonModal" class="modal fade" person-modal>
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Edit person</h4>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group" ng-class="{ 'has-error' : editForm.age.$invalid && !editForm.age.$pristine }">
+                                        <label>Age *</label>
+                                        <input class="form-control" name="age" type="text" required ng-model="editPerson._age" ng-pattern="/^\d+$/" />
+                                        <p ng-show="(editForm.age.$touched && editForm.age.$invalid && !userForm.age.$pristine) || (editForm.age.$invalid && editForm.$submitted)" class="help-block">Valid Age is required.</p>
+                                    </div>
+                                    <label>Street</label>
+                                    <input class="form-control" type="text" ng-model="editPerson._address.streetAddress" />
+                                    <label>City</label>
+                                    <input class="form-control" type="text" ng-model="editPerson._address.city" />
+                                </div>
+                                <div class="col-md-6">
+                                    <label>State</label>
+                                    <input class="form-control" type="text" ng-model="editPerson._address.state" />
+                                    <label>Postal Code</label>
+                                    <input class="form-control" type="text" ng-model="editPerson._address.postalCode" />
+                                    <div class="form-group" ng-class="{ 'has-error' : editForm.homeNumber.$invalid && !editForm.homeNumber.$pristine }">
+                                        <label>Home Number *</label>
+                                        <input class="form-control" name="homeNumber" type="text" required ng-model="editPerson._phoneNumber[0].number" ng-pattern="/^[\d-]+$/" />
+                                        <p ng-show="(editForm.homeNumber.$touched && editForm.homeNumber.$invalid && !userForm.homeNumber.$pristine) || (editForm.age.$invalid && editForm.$submitted)" class="help-block">Phone Number is required.</p>
+                                    </div>
+                                    <div class="form-group" ng-class="{ 'has-error' : editForm.fax.$invalid && !editForm.fax.$pristine }">
+                                        <label>Fax *</label>
+                                        <input class="form-control" name="fax" type="text" required ng-model="editPerson._phoneNumber[1].number" ng-pattern="/^[\d-]+$/" />
+                                        <p ng-show="(editForm.fax.$touched && editForm.fax.$invalid && !userForm.fax.$pristine) || (editForm.age.$invalid && editForm.$submitted)" class="help-block">Fax is required.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
 
         <h1>Angularjs homework</h1>
         <hr />
@@ -123,7 +171,7 @@
                 <td>{{person.address.city}}</td>
                 <td>{{getPhone(person)}}</td>
                 <td>
-                    <button type="button" class="btn btn-default">
+                    <button type="button" class="btn btn-default" ng-click="setEditPerson($index)" data-toggle="modal", data-target="#editPersonModal">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </button>
                     <button type="button" ng-click="setDeletedPersonIndex($index)" class="btn btn-default" data-toggle="modal" data-target="#confirmDeleteModal">
